--- a/TextMSER/README
+++ b/TextMSER/README
@@ -1,4 +1,5 @@
 Text detection and recognition module using the OPENCV MSER-Based text detection feature.  
 
 #To compile and create the shared lib
-g++ -shared -Wl,-soname,TextDetect -o Text.so -ggdb `pkg-config --cflags --libs opencv` -lboost_system -lboost_filesystem -fPIC text_recongnition.cpp
+1-Download/Compile/Install the OpenCV library with the opencv_contrib features
+2-make
